--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,11 @@ php:
   - 7.1
 
 before_script:
-  - composer self-update
-  - composer install --prefer-source --no-interaction --dev
+    - travis_retry composer self-update
+    - travis_retry composer install --no-interaction --prefer-source --dev
 
-script: vendor/bin/phpunit
+script:
+    - vendor/bin/phpunit --coverage-clover=coverage.xml
+
+after_success:
+    - bash <(curl -s https://codecov.io/bash)
