--- a/Docker/nginx/default.conf
+++ b/Docker/nginx/default.conf
@@ -1,15 +1,13 @@
 server {
-    listen 80 default_server;
-    listen [::]:80 default_server;
-    server_name localhost;
-
+    listen 80;
     index index.php index.html;
-    error_log  /var/log/nginx/error.log;
-    access_log /var/log/nginx/access.log;
-    root /web;
+    root /www;
+
+    location / {
+        try_files $uri /index.php?$args;
+    }
 
     location ~ \.php$ {
-        try_files $uri =404;
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
         fastcgi_pass php:9000;
         fastcgi_index index.php;
