--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,15 @@
 version: '2'
 services:
-    web:
-        image: nginx:latest
-        ports:
-            - "8000:80"
-        restart: always
-        volumes:
-            - "./Docker/nginx/default.conf:/etc/nginx/conf.d/default.conf"
-            - ".:/web"
-        depends_on:
-            - "php"
-    php:
-        image: php:7.1.7-alpine
-        restart: always
-        volumes:
-            - "./etc/php/php.ini:/usr/local/etc/php/conf.d/php.ini"
-            - .:/web
+  web:
+      image: nginx:latest
+      ports:
+          - "8880:80"
+      volumes:
+          - .:/web
+          - ./Docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
+      links:
+          - php
+  php:
+      image: php:7.0.21-alpine
+      volumes:
+          - .:/web
