--- a/composer.json
+++ b/composer.json
@@ -1,22 +1,29 @@
 {
-    "name": "daveearley/daves-email-validation-tool",
-    "description": "An easy to use, accurate-ish & extensible email validation library",
-    "type": "project",
-    "require-dev": {
-        "mockery/mockery": "^0.9.9",
-        "phpunit/phpunit": "^6.2"
-    },
-    "license": "MIT",
-    "autoload": {
-        "psr-4": {
-            "EmailValidation\\": "src/",
-            "EmailValidation\\Tests\\": "src/tests"
-        }
-    },
-    "authors": [
-        {
-            "name": "Dave Earley",
-            "email": "dave@earley.email"
-        }
-    ]
+  "name": "daveearley/daves-email-validation-tool",
+  "description": "An easy to use, accurate-ish & extensible email validation library for PHP 7+",
+  "type": "library",
+  "keywords": [
+    "email validation",
+    "email",
+    "validate email",
+    "email verification",
+    "disposable email check"
+  ],
+  "require-dev": {
+    "mockery/mockery": "^0.9.9",
+    "phpunit/phpunit": "^6.2"
+  },
+  "license": "MIT",
+  "autoload": {
+    "psr-4": {
+      "EmailValidation\\": "src/",
+      "EmailValidation\\Tests\\": "src/tests"
+    }
+  },
+  "authors": [
+    {
+      "name": "Dave Earley",
+      "email": "dave@earley.email"
+    }
+  ]
 }
