--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,15 @@
 version: '2'
 services:
-  web:
-      image: nginx:1.13.3-alpine
-      ports:
-          - "8880:80"
-      volumes:
-          - .:/web
-          - ./Docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
-      links:
-          - php
-  php:
-      image: php:7.0.21-fpm-alpine
-      volumes:
-          - .:/web
+    web:
+        image: nginx:1.13-alpine
+        ports:
+            - "8880:80"
+        volumes:
+            - ./Docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
+        links:
+            - php
+    php:
+        image: email-validation-tool:latest
+        build:
+            context: .
+            dockerfile: Dockerfile
