--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     "disposable email check"
   ],
   "require": {
-    "php": "^7.4",
+    "php": ">=7.4",
     "ext-json": "*"
   },
   "require-dev": {
